--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         body {
             margin: 2rem;
-            background-image: linear-gradient(135deg, rgb(164, 52, 198), rgb(129, 48, 241));
+            background : white;
         }
         .carrosel {
             -webkit-perspective: 450px;
